@@ -4941,7 +4941,7 @@ nco_rgr_wgt /* [fnc] Regrid with external weights */
 	/* Obtain input variable */
 	rcd=nco_get_vara(in_id,var_id_in,dmn_srt,dmn_cnt_in,var_val_dbl_in,var_typ_rgr);
 
-	/* 20210909: New missing value treatment */
+	/* 20210909: Begin new missing value treatment */
 	has_mss_val=nco_mss_val_get_dbl(in_id,var_id_in,&mss_val_dbl);
 	/* NB: mss_val_cmp_dbl must be defined since it is now always used by regridder (even when has_mss_val is False)
 	   For instance flg_msk_apl block, below, uses mss_val_cmp_dbl for masked fields
@@ -4972,7 +4972,6 @@ nco_rgr_wgt /* [fnc] Regrid with external weights */
 	  } /* !var_typ_in */
 	} /* !has_mss_val */
 
-	//#if 0
 	/* Re-initialize Boolean to True and override with False if variable _uses_ missing values */
 	has_mss_val=True;
 	for(idx_in=0;idx_in<var_sz_in;idx_in++){
@@ -4980,7 +4979,7 @@ nco_rgr_wgt /* [fnc] Regrid with external weights */
 	} /* !idx_in */
 	/* If neither implicit nor explicit missing value is present, treat all values as valid */
 	if(idx_in == var_sz_in) has_mss_val=False;
-	//#endif /* !0 */
+	/* 20210909: End new missing value treatment */
 
 	/* Memory allocation that depends on _FillValue and input variable contents */
 	if(has_mss_val) tally=(int *)nco_malloc_dbg(var_sz_out*nco_typ_lng(NC_INT),fnc_nm,"Unable to malloc() tally buffer");
