@@ -1,6 +1,8 @@
 2021-09-09  Charlie Zender  <zender@uci.edu>
 
-	* ncremap nco_rgr_wgt() part II: Compare and assign to mss_val_cmp_dbl for floats & ints
+	* New missing value treatment part III: Define has_mss_val only when missing values, whether explicit or implicit, actually appear in input variable data
+
+	* New missing value treatment part II: Compare and assign to mss_val_cmp_dbl for floats & ints
 
 	* ncremap nco_rgr_wgt() new missing value treatment part I: BFB	with old treatment
 
